@@ -1,3 +1,11 @@
+2004-09-04  Andy Wingo  <wingo@pobox.com>
+
+	* autogen-pkg.sh (autogen_pkg): For the dev build-config, set
+	package=guile-gnome-dev, so that no dev distribution tarball
+	escapes into the wild with the name `guile-gnome'. Print out the
+	package name and version. Just print the sorted dependency list,
+	not the progress of the sort.
+
 2004-06-27  Andy Wingo  <wingo@pobox.com>
 
 	* autogen-pkg.sh (ensure_dependencies): New function, taken from
